2021-06-24  Tom de Vries  <tdevries@suse.de>

	* gdb.base/argv0-symlink.exp: Use with_test_prefix.

2021-06-23  Tom de Vries  <tdevries@suse.de>

	* lib/gdb.exp (gdb_test_lines): Rewrite to accept single
	multiline tcl regexp.
	* gdb.base/info-types.exp.tcl: Update.  Make empty line at end of
	regexp optional.
	* gdb.base/info-macros.exp: Update.
	* gdb.cp/cplusfuncs.exp: Update.

2021-06-22  Andreas Schwab  <schwab@suse.de>

	PR symtab/27999
	* lib/dwarf.exp (start_end): New proc inside loclists.
	* gdb.dwarf2/loclists-start-end.exp: New file.
	* gdb.dwarf2/loclists-start-end.c: New file.

2021-06-22  Tom de Vries  <tdevries@suse.de>

	* gdb.dwarf2/imported-unit-c.exp: New file.

2021-06-22  Andrew Burgess  <andrew.burgess@embecosm.com>

	* gdb.server/server-kill.exp: Introduce global kill_pid_of, and
	make use of this in prepare to select which pid we should kill.
	Run all the tests twice with a different kill_pid_of value.
	(prepare): Make use of kill_pid_of.
	(test_stepi): New proc.

2021-06-21  Andrew Burgess  <andrew.burgess@embecosm.com>

	* gdb.python/py-frame.exp: Add Frame.level tests.
	* gdb.python/py-pending-frame-level.c: New file.
	* gdb.python/py-pending-frame-level.exp: New file.
	* gdb.python/py-pending-frame-level.py: New file.

2021-06-21  Andrew Burgess  <andrew.burgess@embecosm.com>

	* gdb.python/py-unwind-user-regs.c: New file.
	* gdb.python/py-unwind-user-regs.exp: New file.
	* gdb.python/py-unwind-user-regs.py: New file.

2021-06-17  Carl Love  <cel@us.ibm.com>

	* gdb.arch/powerpc-power8.exp(bctar, bctarl): Update mnemonics
	to bgetar and bgetarl.
	* gdb.arch/powerpc-power8.s((bctar, bctarl): Update comments
	for mnemonics to bgetar and bnstarl.

2021-06-17  Simon Marchi  <simon.marchi@efficios.com>

	* gdb.base/args.exp: Check target, KFAIL if remote.
	(args_test): Add parameter and use it.

2021-06-17  Simon Marchi  <simon.marchi@efficios.com>

	* gdb.base/args.exp: Remove trailing parenthesis in test names.
