@@ -1,5 +1,10 @@
 2021-06-24  Tom de Vries  <tdevries@suse.de>
 
+	* gdb.base/info-macros.exp: Add <EOL> after trailing whitespace in
+	test names.
+
+2021-06-24  Tom de Vries  <tdevries@suse.de>
+
 	* gdb.base/argv0-symlink.exp: Use with_test_prefix.
 
 2021-06-23  Tom de Vries  <tdevries@suse.de>
